--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@aws-sdk/s3-request-presigner": "^3.723.0",
     "@prisma/client": "^6.2.0",
     "autoprefixer": "^10.4.20",
+    "aws-cloudfront-sign": "^3.0.2",
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
